styling: fix hero styling on tablets

--- a/src/styles/modules/Index.module.scss
+++ b/src/styles/modules/Index.module.scss
@@ -38,7 +38,7 @@
 .cta {
 	@extend .section;
 	position: absolute;
-	
+	backdrop-filter: blur(12px);
 
 	.text {
 		padding: var(--paddingContainer);
@@ -56,15 +56,21 @@
 	}
 
 	@include breakpoint-range($from: mobile) {
-		backdrop-filter: blur(12px);
+		background: var(--backgroundColor);
 		border-radius: var(--borderRadius);
 		min-height: 100vh;
 	}
 
-	@include breakpoint-range($from: desktop) {
+	@include breakpoint-range($from: tablet) { 
 		min-height: 10vh;
+		bottom: 25%;
+		left: 20%;
+	}
+
+	@include breakpoint-range($from: desktop) {
 		bottom: 20%;
 		left: 12%;
+		background: transparent;
 	}
 }
 
@@ -83,11 +89,8 @@
 		}
 	}
 
-	@include breakpoint-range($from: desktopSmall, $to: desktopLarge) {
-		flex-direction: row;
-	}
-
 	@include breakpoint-range($from: desktopSmall) {
 		padding: 0.5rem 3rem;
+		flex-direction: row;
 	}
 }
